gccida/c2/legitimize_address
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5623:43: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  legitimize_address( rtx x, rtx oldx, machine_mode mode) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5631:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5639:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5645:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5650:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5651:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5651:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5653:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5660:4: error: expected ';' after expression
rtx v40; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5660:5: error: use of undeclared identifier 'v40'
rtx v40; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5662:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5663:4: error: expected ';' after expression
rtx v43; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5663:5: error: use of undeclared identifier 'v43'
rtx v43; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5664:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5664:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5688:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5706:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5717:32: error: expected expression
arg0 = force_reg( v19, *( rtx *)( fld->rtwint + 8)); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/i386.c:5724:13: error: expected ';' after expression
v21 = ( rtx)v4[1]; 
            ^
            ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_address/src/obj/i386.o] Error 1
